--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -47,7 +47,7 @@
             <th>Skills</th>
             <th>Experience</th>
             <th>Expected Package</th>
-            <th>Resume</th>
+            <!-- <th>Resume</th> -->
             </tr>
         </thead>
         <tbody id="userTable">
